--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 aocmacro = {path = "aocmacro", version = "*"}
-cachedir = "*"
-ureq = "*"
-structopt = "*"
+cachedir = "0.1.1"
+ureq = "0.11.0"
+structopt = "0.2.18"
