--- a/aocmacro/Cargo.toml
+++ b/aocmacro/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-quote = "*"
-syn = { version = "*", features = ["full"] }
+quote = "1.0"
+syn = { version = "1.0.1", features = ["full"] }
